--- a/sprintgame.csproj
+++ b/sprintgame.csproj
@@ -302,6 +302,7 @@
     <Compile Include="Assets\Scripts\Points.cs" />
     <Compile Include="Assets\Scripts\sceneScroller.cs" />
     <Compile Include="Assets\ShootingBehavior.cs" />
+    <Compile Include="Assets\ShootingScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
